crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@333.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017 12:34 -05\"', '$.datetime(\"dd-mm-yyyy HH24:MI TZH\")');"
---
SelectStmt@0..90
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..88
    FuncCall@7..88
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..48
        Sconst@24..48 "'\"10-03-2017 12:34 -05\"'"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..88
        Sconst@50..88 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@88..89 ")"
  Ascii59@89..90 ";"

