crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@334.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017 12:34 +05:20\"', '$.datetime(\"dd-mm-yyyy HH24:MI TZH:TZM\")');"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..95
    FuncCall@7..95
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..51
        Sconst@24..51 "'\"10-03-2017 12:34 +0 ..."
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..95
        Sconst@53..95 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

