crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@337.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34\"', '$.datetime(\"HH24:MI TZH\")');"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'\"12:34\"'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..62
        Sconst@35..62 "'$.datetime(\"HH24:MI  ..."
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

