crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@339.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34 -05\"', '$.datetime(\"HH24:MI TZH\")');"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..37
        Sconst@24..37 "'\"12:34 -05\"'"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      AConst@39..66
        Sconst@39..66 "'$.datetime(\"HH24:MI  ..."
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

