crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@345.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"2017-03-10 12:34:56\"', '$.datetime().type()');"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..47
        Sconst@24..47 "'\"2017-03-10 12:34:56\"'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..70
        Sconst@49..70 "'$.datetime().type()'"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

