crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@346.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"2017-03-10 12:34:56\"', '$.datetime()');"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..47
        Sconst@24..47 "'\"2017-03-10 12:34:56\"'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..63
        Sconst@49..63 "'$.datetime()'"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

