crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@347.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"2017-03-10 12:34:56+3\"', '$.datetime().type()');"
---
SelectStmt@0..74
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..72
    FuncCall@7..72
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..49
        Sconst@24..49 "'\"2017-03-10 12:34:56 ..."
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..72
        Sconst@51..72 "'$.datetime().type()'"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

